--- a/frontend/style.css
+++ b/frontend/style.css
@@ -86,8 +86,8 @@ nav img {
 .hero-btn {
   display: inline-block;
   text-decoration: none;
-  color: #fff;
-  border: 1px solid #fff;
+  color: #f44336;
+  border: 1px solid #f44336;
   padding: 12px 34px;
   font-size: 13px;
   background: transparent;
@@ -98,6 +98,7 @@ nav img {
   border: 1px solid #f44336;
   background: #f44336;
   transition: 1s;
+  color: #fff;
 }
 nav .fa {
   display: none;
@@ -153,7 +154,7 @@ p {
 .row {
   /* margin-top: 5%; */
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .service-col {
   flex-basis: 31%;
